--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@
      providedCompile 'javax.el:el-api:2.2'
      providedCompile 'javax.servlet:jstl:1.2'
      compile 'mysql:mysql-connector-java:8.0.13'
+     compile 'com.owlike:genson:1.4'
      compile 'log4j:log4j:1.2.17'
      compile 'com.jcabi:jcabi-log:0.18'
      testCompile 'junit:junit:4.12'
