--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/git,java,bower,maven,gradle,intellij,java-web,eclipse
 # Edit at https://www.gitignore.io/?templates=git,java,bower,maven,gradle,intellij,java-web,eclipse
 
+### JRebel ###
+src/main/resources/rebel.xml
+
 ### Bower ###
 bower_components
 .bower-cache
