--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,25 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     version="3.0">
+    
      <display-name>Livraria WEB</display-name>
+     
      <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
      </welcome-file-list>
+
+<!--
+     <servlet>
+        <servlet-class>br.com.livrariaweb.controller.LivroController</servlet-class>
+        <servlet-name>LivroController</servlet-name>
+     </servlet>
+     
+     <servlet-mapping>
+        <servlet-name>LivroController</servlet-name>
+        <url-pattern>/livros</url-pattern>
+     </servlet-mapping>
+-->
+     
 </web-app>
 
