--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@
      providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
      providedCompile 'javax.servlet.jsp:jsp-api:2.2'
      providedCompile 'javax.el:el-api:2.2'
-     providedCompile 'javax.servlet:jstl:1.2'
+     compile 'javax.servlet:jstl:1.2'
      compile 'mysql:mysql-connector-java:8.0.13'
      compile 'com.owlike:genson:1.4'
      compile 'log4j:log4j:1.2.17'
