--- a/bower.json
+++ b/bower.json
@@ -27,11 +27,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "3.4.0",
-    "jquery": "3.3.1"
+    "bootstrap": "4.3.1",
+    "jquery": "^3.3.1"
   },
-  "devDependencies": {
-    "jquery": "3.3.1",
-    "bootstrap": "3.4.0"
-  }
+  "devDependencies": {}
 }
