--- a/build.gradle
+++ b/build.gradle
@@ -37,12 +37,18 @@
      providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
      providedCompile 'javax.servlet.jsp:jsp-api:2.2'
      providedCompile 'javax.el:el-api:2.2'
+     
      compile 'javax.servlet:jstl:1.2'
-     compile 'mysql:mysql-connector-java:8.0.13'
      compile 'com.owlike:genson:1.4'
      compile 'log4j:log4j:1.2.17'
      compile 'com.jcabi:jcabi-log:0.18'
+     
+     runtime 'mysql:mysql-connector-java:8.0.13'
+     
      testCompile 'junit:junit:4.12'
+     testCompile 'org.mockito:mockito-core:2.7.19'
+     testCompile 'io.github.bonigarcia:webdrivermanager:1.6.1'
+     testCompile 'org.seleniumhq.selenium:selenium-java:3.3.1'
  }
  
 
